--- a/wiseSaying/Podfile
+++ b/wiseSaying/Podfile
@@ -5,8 +5,8 @@ target 'wiseSaying' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'JTAppleCalender'
   # Pods for wiseSaying
+  pod 'FSCalendar'
 
   target 'wiseSayingTests' do
     inherit! :search_paths
